service-4-k8s/src/main/resources/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/luizgustavocosta/16-bits-quarkus.git
    app.quarkus.io/build-timestamp: 2021-05-15 - 08:29:11 +0000
    app.quarkus.io/commit-id: 414b59a82859cab59d9ff4dc292358d53e0fc4ea
  labels:
    app.kubernetes.io/name: service-4-k8s
    app.kubernetes.io/version: 0.0.1-SNAPSHOT
  name: service-4-k8s
  namespace: 16-bits
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: service-4-k8s
    app.kubernetes.io/version: 0.0.1-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/luizgustavocosta/16-bits-quarkus.git
    app.quarkus.io/build-timestamp: 2021-05-15 - 08:29:11 +0000
    app.quarkus.io/commit-id: 414b59a82859cab59d9ff4dc292358d53e0fc4ea
  labels:
    app.kubernetes.io/name: service-4-k8s
    app.kubernetes.io/version: 0.0.1-SNAPSHOT
  name: service-4-k8s
  namespace: 16-bits
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: service-4-k8s
      app.kubernetes.io/version: 0.0.1-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/vcs-url: https://github.com/luizgustavocosta/16-bits-quarkus.git
        app.quarkus.io/build-timestamp: 2021-05-15 - 08:29:11 +0000
        app.quarkus.io/commit-id: 414b59a82859cab59d9ff4dc292358d53e0fc4ea
      labels:
        app.kubernetes.io/name: service-4-k8s
        app.kubernetes.io/version: 0.0.1-SNAPSHOT
      namespace: 16-bits
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: 16bits/service-4-k8s-jvm:0.0.1
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: service-4-k8s
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: quarkus-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: service-4-k8s
              servicePort: 8080
---
